feat: 해변 목록 페이지
api로 받아온 데이터를 가공하는 과정을 매번 페이지 렌더링마다 하지 않도록 하게 하고 싶다.

--- a/beach50/src/App.css
+++ b/beach50/src/App.css
@@ -9,7 +9,9 @@ a {
    text-decoration: none;
    color: inherit;
 }
-
+main {
+   margin-top: 60px;
+}
 .header {
    display: flex;
    align-items: center;
@@ -21,6 +23,7 @@ a {
    position: fixed;
    z-index: 10;
    width: calc(100% - 100px);
+   top: 0;
 }
 .header > h2,
 .header > a {
